[package]
name = "crucible"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8.5", features = ["alloc"] }
seq_io = "0.4.0-alpha.0"
ahash = "0.7.6"
clap = { version = "3.1.18", features = ["derive"] }
ordered-float = "3.0.0"
fixedbitset = "0.4.1"
itertools = "0.10.3"
rayon = "1.5.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ndarray = "0.15.4"
ogcat = {git = "https://github.com/RuneBlaze/ogcat"}