[package]
name = "crucible"
version = "0.0.2"
edition = "2021"

[[bin]]
name = "witch-ng"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.8.5", features = ["alloc"] }
seq_io = "0.4.0-alpha.0"
ahash = "0.7.6"
clap = { version = "3.1.18", features = ["derive"] }
ordered-float = "3.0.0"
fixedbitset = "0.4.1"
itertools = "0.10.3"
rayon = "1.5.3"
thread_local = "1.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ndarray = { version = "0.15.4", features = ["serde"] }
ogcat = {git = "https://github.com/RuneBlaze/ogcat"}
rmp-serde = "1.1.0"
lazy_static = "1.4.0"
regex = "1"
sled = { version = "0.34.7", features = ["zstd", "compression"] } 
derive_builder = "0.12.0"
rkyv = "0.7.41"
num_cpus = "1.15.0"

[dependencies.rmp]
rmp = "^0.8"